[tool.poetry]
name = "undercover"
version = "0.1.0"
description = ""
authors = ["hourglass458@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
cryptography = "^40.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

